src/styles.scss
/* GLOBAL STYLES */

html,
body {
  height: 100%;
  background-color: #eaeeff;
}

body {
  font-family: Roboto, "Helvetica Neue", sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
}

